<resources>
    <string name="app_name">Step Up</string>
    <string name="welcome_message">Dara rules!</string>
    <string name="activity_generator_button_text">Activity Generator</string>
    <string name="welcome_activity_generator">Welcome to Activity Generator</string>
    <string name="generate_activity">Generate</string>
    <string name="supervisor_button">Supervisor</string>
    <string name="workday_button">Workday</string>
    <string name="meetings_button">Meetings</string>
    <string name="timer_button">Timer</string>
    <string name="activities_button">Activities</string>
    <string name="settings_button">Settings</string>
    <string name="start_button">Start</string>
    <string name="snooze_button">Snooze</string>
    <string name="hours_label">Hours</string>
    <string name="minutes_label">Minutes</string>
    <string name="seconds_label">Seconds</string>
    <string name="set_timer">Set</string>
</resources>